# ocr-smaple-test

./: .env  README.md  main.py  pyproject.toml  uv-project-management.mdc
