[project]
name = "ocr-smaple-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pillow>=12.0.0",
    "pydantic-ai-slim[logfire,openai]>=1.15.0",
    "pymupdf>=1.26.6",
    "pymupdf-layout>=1.26.6",
    "python-dotenv>=1.2.1",
]
